Tracking function + FYM changes (+4 squashed commits) Squashed commits: [958241c] Fym fixes [a866209] Deploy as FYM [f9a337c] Updated readme [7f1faec] Added local dev improvements

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,6 @@
 html,
 body {
-  font-family: Inter, -apple-system, BlinkMacSystemFont, sans-serif;
+  font-family: Rubik, -apple-system, BlinkMacSystemFont, sans-serif;
   font-size: var(--font-size-normal);
   font-weight: 400;
   line-height: 1.8;
